got finish form.html file, + a little fix for the index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <nav class="top-menu">
     <ul class="top-menu__list">
       <li class="top-menu__item">
-        <img class="top-menu__logo-image" src="http://placehold.it/86x35" width="86" height="35">
+        <img class="top-menu__logo-image" src="http://placehold.it/86x35" width="86" height="35" alt="Лого">
         <button class="top-menu__toggle-menu">X</button>
       </li>
       <li class="top-menu__item">
@@ -50,18 +50,61 @@
       </tr>
     </table>
     <img class="featured__basket-image" src="http://placehold.it/260x315" width="260" height="315" alt="Вязаные корзиночки">
+    <p class="featured__price">Цена: 990 руб.</p>
     <button class="featured__to-order">Заказать</button>
   </section>
   <section class="about">
     <h2 class="about__title">Коротко о нас:</h2>
     <ul class="about__list">
-      <li class="about__item"><a href="#" class="about__link">Экологически чистые материалы</a></li>
-      <li class="about__item"><a href="#" class="about__link">Скандинавский стиль по российской цене</a></li>
-      <li class="about__item"><a href="#" class="about__link">Ссылка 3</a></li>
-      <li class="about__item"><a href="#" class="about__link">Ссылка 4</a></li>
-      <li class="about__item"><a href="#" class="about__link">Ссылка 5</a></li>
-      <li class="about__item"><a href="#" class="about__link">Ссылка 6</a></li>
+      <li class="about__item">
+        <a href="#" class="about__link">Экологически чистые материалы</a>
+      </li>
+      <li class="about__item">
+        <a href="#" class="about__link">Скандинавский стиль по российской цене</a>
+      </li>
+      <li class="about__item">
+        <a href="#" class="about__link">Увеличивает лайки на фотографиях</a>
+      </li>
+      <li class="about__item">
+        <a href="#" class="about__link">Связано вручную с любовью и умилением</a>
+      </li>
+      <li class="about__item">
+        <a href="#" class="about__link">Поддержка отечественного производителя</a>
+      </li>
+      <li class="about__item">
+        <a href="#" class="about__link">Поставляется в подарочной упаковке</a>
+      </li>
     </ul>
+    <article class="about__comments">
+      <h2 class="about__title">Отзывы</h2>
+      <p class="about__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+      <p class="about__name">Анастасия Красильникова</p>
+      <p class="about__contact">@misssssiskras</p>
+      <button class="about__prev-button">Назад</button>
+      <button class="about__next-button">Вперед</button>
+      <a href="add_message.php" class="about__to-write">Написать</a>
+    </article>
   </section>
+  <section class="contacts">
+    <h3 class="contacts__title">Контакты</h3>
+    <p class="contacts__email">
+      <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+    </p>
+    <p class="contacts__address">г. Санкт-Петербург,<br>ул. Большая Конюшеная,<br>д. 19/8, офис 101</p>
+    <div class="contacts__map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5967947784975!2d30.320951855090886!3d59.93883250326515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516451300780" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <a href="write_us_form.html" class="contacts__write-us">Напишите нам</a>
+  </section>
+  <footer class="main-footer">
+    <ul class="main-footer__list">
+      <li class="main-footer__item"><a href="#">Instagramm</a></li>
+      <li class="main-footer__item"><a href="#">Facebook</a></li>
+      <li class="main-footer__item"><a href="#">Twitter</a></li>
+    </ul>
+    <p class="main-footer__copyright">
+      <a href="#" class="main-footer__link">Разработано</a>
+    </p>
+  </footer>
 </body>
 </html>
