--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a href="#" class="about__link">Поставляется в подарочной упаковке</a>
       </li>
     </ul>
-    <article class="about__comments">
+    <article class="about-comments">
       <h2 class="about__title">Отзывы</h2>
       <p class="about__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
       <p class="about__name">Анастасия Красильникова</p>
