--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </table>
     <img class="featured__basket-image" src="http://placehold.it/260x315" width="260" height="315" alt="Вязаные корзиночки">
     <p class="featured__price">Цена: 990 руб.</p>
-    <button class="featured__to-order">Заказать</button>
+    <a href="#" class="featured__to-order">Заказать</a>
   </section>
   <section class="about">
     <h2 class="about__title">Коротко о нас:</h2>
