bug fixes in form.html

--- a/form.html
+++ b/form.html
@@ -35,53 +35,53 @@
     </p>
     <form action="https://echo.htmlacademy.ru" method="get">
       <div class="form__type">
-        <p class="form__type-item">Тип</p><hr>
-        <label class="form__label" aria-label="Аксесуары для интерьера" for="radio-1">
-          <input id="radio-1" name="type" type="radio" value="accessories">
+        <p class="form__type-item">Тип</p>
+        <label class="form__label" aria-label="Аксесуары для интерьера" for="form-radio-accessories">
+          <input id="form-radio-accessories" name="type" type="radio" value="accessories">
           <span class="indicator"></span>
           Аксесуары для интерьера
         </label>
-        <label class="form__label" aria-label="Детская игрушка" for="radio-2">
-          <input id="radio-2" name="type" type="radio" value="toys">
+        <label class="form__label" aria-label="Детская игрушка" for="form-radio-toys">
+          <input id="form-radio-toys" name="type" type="radio" value="toys">
           <span class="indicator"></span>
           Детская игрушка
         </label>
       </div>
       <div class="form__color">
-        <p class="form__type-item">Цвет</p><hr>
-        <label class="form__label" for="checkbox-1" aria-label="Белый">
-          <input id="checkbox-1" type="checkbox" name="color-1" value="white" checked>
+        <p class="form__type-item">Цвет</p>
+        <label class="form__label" for="checkbox-white" aria-label="Белый">
+          <input id="checkbox-white" type="checkbox" name="color-white" value="white" checked>
           <span class="indicator"></span>
           Белый
         </label>
-        <label class="form__label" for="checkbox-2" aria-label="Серый">
-          <input id="checkbox-2" type="checkbox" name="color-2" value="grey" checked>
+        <label class="form__label" for="checkbox-grey" aria-label="Серый">
+          <input id="checkbox-grey" type="checkbox" name="color-grey" value="grey" checked>
           <span class="indicator"></span>
           Серый
         </label>
-        <label class="form__label" for="checkbox-3" aria-label="Тиффани">
-          <input id="checkbox-3" type="checkbox" name="color-3" value="tiffany">
+        <label class="form__label" for="checkbox-tiffany" aria-label="Тиффани">
+          <input id="checkbox-tiffany" type="checkbox" name="color-tiffany" value="tiffany">
           <span class="indicator"></span>
           Тиффани
         </label>
-        <label class="form__label" for="checkbox-4" aria-label="Черный">
-          <input id="checkbox-4" type="checkbox" name="color-4" value="black">
+        <label class="form__label" for="checkbox-black" aria-label="Черный">
+          <input id="checkbox-black" type="checkbox" name="color-black" value="black">
           <span class="indicator"></span>
           Черный
         </label>
-        <label class="form__label" for="checkbox-5" aria-label="Розовый">
-          <input id="checkbox-5" type="checkbox" name="color-5" value="pink">
+        <label class="form__label" for="checkbox-pink" aria-label="Розовый">
+          <input id="checkbox-pink" type="checkbox" name="color-pink" value="pink">
           <span class="indicator"></span>
           Розовый
         </label>
-        <label class="form__label" for="checkbox-6" aria-label="Оранжевый">
-          <input id="checkbox-6" type="checkbox" name="color-6" value="orange">
+        <label class="form__label" for="checkbox-orange" aria-label="Оранжевый">
+          <input id="checkbox-orange" type="checkbox" name="color-orange" value="orange">
           <span class="indicator"></span>
           Оранжевый
         </label>
       </div>
       <div class="form__personal">
-        <p class="form__type-item">Фио</p><hr>
+        <p class="form__type-item">Фио</p>
         <label class="form__label" for="form__first-name">Имя:
           <input id="form__first-name" type="input" placeholder="Введите ваше имя*">
         </label>
@@ -92,15 +92,15 @@
           <input id="form__patronymic" type="input" placeholder="Отчество, если желаете">
         </label>
         <label class="form__label" for="form__phone">
-          <p class="form__type-item">Тел</p><hr>
+          <p class="form__type-item">Тел</p>
           <input id="form__phone" type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
         </label>
         <label class="form__label" for="form__email">
-          <p class="form__type-item">E-mail</p><hr>
+          <p class="form__type-item">E-mail</p>
           <input id="form__email" type="email" name="usremail" placeholder="Ваш E-mail*">
         </label>
         <label for="additionally">
-          <p class="form__type-item">Доп</p><hr>
+          <p class="form__type-item">Доп</p>
           <textarea class="form__additionally" id="additionally" rows="7" cols="30" name="additionally" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </label>
         <p class="form__description">*Поля обязательные для заполнения</p>
